# small_ws_proj

./: pyproject.toml
app/: main.py
app/configs/: db.py  settings.py
app/dependencies/: container.py
app/dependencies/providers/: __init__.py  connection_provider.py  repo_provider.py  service_provider.py  settings_provider.py
app/handlers/: __init__.py  room_handlers.py  user_handlers.py
app/models/pydantic/: __init__.py  room.py  user.py
app/models/sql/: __init__.py  base.py  msg.py  rooms.py  users.py
app/repo/: __init__.py  repo_mixin.py  room.py  user.py
app/service/: __init__.py  connection_ws_service.py  room.py  service_mixin.py  user.py
migrations/: env.py
