[tool.poetry]
name = "small-ws-proj"
version = "0.1.0"
description = ""
authors = ["VB <pdorou@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.14"
sqlalchemy = "^2.0.41"
pydantic = "^2.11.7"
black = "^25.1.0"
alembic = "^1.16.2"
psycopg = "^3.2.9"
greenlet = "^3.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
